name:                lord
version:             1.20131124
synopsis:            A command line interface to online radios.
description:         
    A unified interface to online radio service providers, use mpd as backend.
    .
    Supported radios:
    <http://radioreddit.com>
    <http://cmd.fm>
    <http://douban.fm>
    <http://jing.fm>
homepage:            https://github.com/rnons/lord
bug-reports:         https://github.com/rnons/lord/issues
license:             PublicDomain
license-file:        LICENSE
author:              rnons
maintainer:          remotenonsense@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.3
Extra-Source-Files:  CHANGELOG

source-repository   head
  type:             git
  location:         git://github.com/rnons/lord.git
 
executable lord
  main-is:              main.hs         
  other-modules:        Radio,
                        Radio.Cmd,
                        Radio.Douban,
                        Radio.Jing,
                        Radio.Reddit
  ghc-options:          -Wall -fno-warn-unused-do-bind
  build-depends:        base >= 4 && < 5, 
                        aeson >= 0.6, 
                        ansi-terminal >= 0.6, 
                        attoparsec-conduit >= 1.0, 
                        bytestring >= 0.9, 
                        case-insensitive >= 1.0, 
                        conduit >= 1.0, 
                        configurator >= 0.2, 
                        daemons >= 0.1.2,
                        data-default >= 0.5,
                        directory >= 1.1, 
                        fast-logger >= 0.3,
                        html-conduit >= 1.1, 
                        http-conduit >= 1.9, 
                        http-types >= 0.8, 
                        libmpd >= 0.8, 
                        optparse-applicative >= 0.5,
                        text >= 0.11, 
                        transformers >= 0.3, 
                        unix >= 2.5, 
                        unordered-containers >= 0.2, 
                        utf8-string >= 0.3, 
                        xml-conduit >= 1.1,
                        yaml >= 0.8
  default-language:     Haskell2010

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              test/main.hs
  ghc-options:          -Wall -fno-warn-unused-do-bind
  hs-source-dirs:       .
  build-depends:        base >= 4 && < 5,
                        aeson >= 0.6, 
                        ansi-terminal >= 0.6, 
                        attoparsec-conduit >= 1.0, 
                        bytestring >= 0.9, 
                        case-insensitive >= 1.0, 
                        conduit >= 1.0, 
                        configurator >= 0.2, 
                        daemons >= 0.1.2,
                        data-default >= 0.5,
                        directory >= 1.1, 
                        fast-logger >= 0.3,
                        hspec >= 1.6,
                        html-conduit >= 1.1, 
                        http-conduit >= 1.9, 
                        http-types >= 0.8, 
                        HUnit >= 1.2,
                        libmpd >= 0.8, 
                        optparse-applicative >= 0.5,
                        text >= 0.11, 
                        transformers >= 0.3, 
                        unix >= 2.5, 
                        unordered-containers >= 0.2, 
                        utf8-string >= 0.3, 
                        xml-conduit >= 1.1,
                        yaml >= 0.8
  default-language:     Haskell2010
